[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Bahare Zargarbashi <Bahare.zargarbashi2@gmail.com>"]
readme = "README.md"
packages = [{include = "auth_service"}]  # Ensure this matches your module

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.11,<0.116.0"
pydantic = {extras = ["dotenv"], version = ">=2.10.6,<3.0.0"}
motor = ">=3.7.0,<4.0.0"
passlib = ">=1.7.4,<2.0.0"
pyjwt = ">=2.10.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
